# mech-predict

./: .example.env  .example_agent_base.env  .example_agent_gnosis.env  .example_service_base.env  .example_service_gnosis.env  .gitignore  .gitleaksignore  CLAUDE.md  MPP_COST_PROPOSAL.md  MPP_DATA_PIPELINE.md  MPP_MODE_DEFINITIONS.md  Makefile  PR_DESCRIPTION_CACHED_REPLAY.md  PR_DESCRIPTION_METRICS.md  README.md  WILDCARD_PROPOSAL_SUMMARY.md  pyproject.toml  run_agent.sh  run_service.sh  tool_lineage.json  tox.ini
.claude/tool-improvements/: factual_research.md  superforcaster-polymarket-v1.md
.github/workflows/: benchmark_flywheel.yaml  benchmark_replay.yaml  benchmark_roi.yaml  common_checks.yaml  release.yaml
benchmark/: BENCHMARK_REFACTOR_PLAN.md  BENCHMARK_REPORT_FIXES.md  BENCHMARK_TEST_LOG.md  CI_GATE_PROBE.md  CLAUDE.md  DAILY_BENCHMARK_REPORT.md  IMPLEMENTATION_NOTES.md  MVP_PLAN.md  NEXT_STEPS_PLAN.md  PREDICTION_ONLINE_PROMPT_AB_TEST.md  PREDICTION_REQUEST_REASONING_PROMPT_AB_TEST.md  PROMOTE_DEMOTE_POLICY.md  PROMPT_AB_TEST_REPORT.md  PROMPT_IMPROVEMENT_PLAN.md  PROPOSAL.md  README.md  REPORT_RESTRUCTURE_PLAN.md  REQUIRED_CHANGES.md  SCHEMA_IMPLEMENTATION_PLAN.md  SCHEMA_PROPOSAL.md  SWEEP_CODE_CHANGE_PLAN.md  TOOL_ANALYSIS.md  analyze.py  categories.py  ci_replay.py  compare.py  io.py  ipfs_loader.py  mech_analytics_client.py  notify_slack.py  prepare_suggestion.py  prompt_replay.py  release_map.py  roi_sim.py  roi_slack.py  runner.py  score_tournament.py  scorer.py  stats_loop.py  sweep.py  (+6 more)
benchmark/datasets/: backfill_responses.py  fetch_open.py  fetch_production.py  fetch_replay.py  sample_replay.jsonl  subgraph.py
benchmark/plans/: 03-04-2026-daily-plan.md  2026-04-02-daily-plan.md
benchmark/reports/: 2026-05-07-polymarket-resolution-discovery.md
benchmark/results/: report.md  scores.json
benchmark/stats_loop/: __init__.py  open_issue.py  triage.py
benchmark/tests/: test_analyze.py  test_backfill_responses.py  test_categories.py  test_ci_replay.py  test_compare.py  test_fetch_open.py  test_fetch_production.py  test_ipfs_loader.py  test_mech_analytics_client.py  test_notify_slack.py  test_prompt_replay.py  test_release_map.py  test_roi_sim.py  test_roi_slack.py  test_runner.py  test_score_tournament.py  test_scorer.py  test_stats_loop.py  test_subgraph.py  test_tool_improvement_triage.py  test_tool_usage.py  test_tournament.py  test_tournament_tools_config.py
deployment/: Dockerfile  watcher.Dockerfile
docs/: index.md  tools_models_readme.md
docs/design/: roi-companion-sim-one-pager.md
experiments/: scripts-deduplication-report.md
experiments/scripts-deduplication/: implementation-plan.md  scripts-deduplication-report.md
experiments/scripts-deduplication-v2/: analysis-report.md  implementation-plan.md
experiments/tooling-analysis/: dependency-and-testing-tooling.md
healthcheck_service/: README.md  healthcheck.py  rpc.py
healthcheck_service/web3/: abi.json
proposals/wildcard-mpp/: MPP_COST_PROPOSAL.md  MPP_DATA_PIPELINE.md  WILDCARD_PROPOSAL_SUMMARY.md
scripts/: compare_polymarket_resolution_sources.py  generate_metadata.py  mech_watcher.py  publish_metadata.py  test_tool.py  test_tools.py  tool_schemas.yaml  verify_migration_swap.py
tests/: conftest.py  constants.py  shared_constants.py  test_ipfs_compatibility.py  test_tools.py
tests/benchmark/: test_analyze.py  test_fetch_open.py  test_fetch_production.py  test_score_tournament.py  test_scorer.py  test_tournament.py
