[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (mech-family = "mech repos", not apps).
    "requests>=2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "hypothesis>=6",
    "web3>=7,<8",
    "pytest-asyncio>=1.3",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest>=8.2,<10",
    "openapi-core<0.23,>=0.22",
    "prometheus-client>=0.23.1,<0.24",
    "pebble>=5.1,<5.2",
    "python-dotenv>=0.21",
    "pip>=24.0",
    # Custom-tool AI / data deps — ranges.
    "openai>=1.93,<2",
    "anthropic>=0.23.1,<0.24",
    "langchain>=1.2,<2",
    "langchain-core>=1.2,<2",
    "langchain-tavily>=0.2,<0.3",
    "langgraph>=1,<2",
    "google-generativeai>=0.8,<0.9",
    "google-api-python-client>=2.95,<3",
    "google-api-core>=2.20.0,<3",
    "googlesearch-python>=1.2,<2",
    "beautifulsoup4>=4.12,<5",
    "numpy>=1.24,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1.1,<3",
    "tiktoken>=0.12,<0.13",
    "python-dateutil>=2.8,<3",
    "markdownify>=0.11,<0.14",
    "tavily-python>=0.3,<0.4",
    # readability-lxml pinned to 0.8.1: newer 0.8.4.1 declares
    # `lxml[html_clean]` with an underscore but lxml 6.0.2 exposes the extra
    # with a hyphen (`html-clean`); liccheck's pkg_resources lookup fails
    # on the mismatch.
    "readability-lxml==0.8.1",
    "docstring-parser>=0.17,<0.18",
    "faiss-cpu>=1.13,<2",
    "pypdf2>=3.0.1,<4",
    "moviepy>=1,<2",
    # replicate pinned: 0.15.8 ships without the classifier metadata
    # liccheck needs; 0.15.7 is the last release with a license tag.
    "replicate==0.15.7",
    # lxml exception: kept as an exact pin because `readability-lxml==0.8.1`
    # transitively requests `lxml[html_clean]` (underscore), and only
    # lxml 6.0.2 happens to register the extra under both the underscore
    # *and* the hyphenated form that liccheck's pkg_resources path accepts.
    # Newer lxml versions drop one or the other and the check fails.
    "lxml[html-clean]==6.0.2",
    "httpx>=0.25,<0.26",
    "tqdm>=4.67,<5",
    "openfactverification-kongzii>=0.1.0,<0.2",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech"

[dependency-groups]
dev = [
    "tomte[cli, tests]==0.6.5",
    "types-beautifulsoup4>=4.12.0.20250516,<5",
    "types-python-dateutil>=2.9.0.20250516,<3",
    "types-tqdm>=4.67.0.20250516,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
