[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Agent-repo (app) deps — exact pins per David's #436 rule.
    # Ranges are reserved for framework/lib repos; agent repos pin
    # everything non-OA throughout.
    "openai==1.93.0",
    "requests==2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "hypothesis==6.21.6",
    "web3>=7,<8",
    "pytest-asyncio==1.3.0",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "googlesearch-python==1.2.3",
    "beautifulsoup4==4.12.2",
    "google-api-python-client==2.95.0",
    "anthropic==0.23.1",
    "langchain==1.2.10",
    "langchain-core==1.2.17",
    "langchain-tavily==0.2.17",
    "pytest>=8.2,<10",
    "jsonschema<4.24.0,>=4.20.0",
    "numpy>=1.24,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1.1,<3",
    "tiktoken==0.12.0",
    "python-dateutil==2.8.2",
    "markdownify==0.11.6",
    "tavily-python==0.3.3",
    # readability-lxml pinned to 0.8.1: newer 0.8.4.1 declares
    # `lxml[html_clean]` with an underscore but lxml 6.0.2 exposes the extra
    # with a hyphen (`html-clean`); liccheck's pkg_resources lookup fails
    # on the mismatch.
    "readability-lxml==0.8.1",
    "docstring-parser==0.17.0",
    "faiss-cpu==1.13.2",
    "pypdf2>=3.0.1,<4",
    "moviepy==1.0.3",
    # replicate pinned: 0.15.8 ships without the classifier metadata
    # liccheck needs; 0.15.7 is the last release with a license tag.
    "replicate==0.15.7",
    "langgraph==1.0.10",
    "google-generativeai==0.8.6",
    "openfactverification-kongzii>=0.1.0,<0.2",
    # lxml exception: kept as an exact pin because `readability-lxml==0.8.1`
    # transitively requests `lxml[html_clean]` (underscore), and only
    # lxml 6.0.2 happens to register the extra under both the underscore
    # *and* the hyphenated form that liccheck's pkg_resources path accepts.
    # Newer lxml versions drop one or the other and the check fails.
    "lxml[html-clean]==6.0.2",
    "google-api-core>=2.20.0,<3",
    "openapi-core==0.22.0",
    "httpx==0.25.2",
    "tqdm==4.67.1",
    "prometheus-client>=0.23.1,<0.24",
    "pebble==5.1.3",
    "python-dotenv==0.21.1",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech"

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.20250516,<5",
    "types-python-dateutil>=2.9.0.20250516,<3",
    "types-tqdm>=4.67.0.20250516,<5",
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@01ecfd5b2b68021bc94b76d9581eb3944bbd41b2",
]

[tool.uv]
default-groups = "all"

[tool.tomte]
# mech-predict has dev customs spanning multiple author dirs
# (valory + dvilela + napthaai + nickcom007 + victorpolisetty);
# pin packages_paths to the primary first-party author so the env vars
# the canonical envs export resolve sensibly.
packages_paths = "packages/valory"
# benchmark/ and scripts/ live at repo root and are first-party Python
# that needs linting alongside the auto-discovered dev customs.
service_specific_packages_extra = ["benchmark", "scripts"]
pytest_targets_extra = ["benchmark/tests"]
# Third-party skills/contracts on disk are synced from mech upstream;
# tomte auto-prepends valory-xyz/open-autonomy@... and open-aea@...
# from pyproject pins, so only the non-PyPI mech upstream needs listing.
upstream_pins = ["valory-xyz/mech@v0.31.2"]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@01ecfd5b2b68021bc94b76d9581eb3944bbd41b2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
markers = [
    "integration: marks integration tests which require other network services",
    "e2e: marks end-to-end agent tests",
]
filterwarnings = ["ignore::DeprecationWarning:aea.*:"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
